# noten

./: Cargo.toml  README.md  rustfmt.toml
src/: config.rs  main.rs  process.rs  skeleton.rs  substitution.rs  template_deps.rs
src/util/: fs.rs  mod.rs  toml.rs
