[package]
name = "noten"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
edition = "2021"

[dependencies]
toml = "0.8.8"
quick-error = "2.0.1"
log = "0.4.20"
env_logger = "0.11.3"
regex = "1.10.2"
serde = "1.0.193"
serde_derive = "1.0.193"
pulldown-cmark = { version = "0.11.0", default-features = false, features = ["html"] }
